@@ -3,7 +3,7 @@
 $| = 1;
 
 BEGIN {
-   print "1..24\n";
+   print "1..31\n";
    print "ok 1 # MODEL=$AnyEvent::IO::MODEL\n";
 }
 use AnyEvent;
@@ -15,7 +15,6 @@ BEGIN {
 our $t = 3;
 
 sub t {
-   my $cv = AE::cv;
    my $ok = shift;
    my $f = "ae_" . shift;
    $f->(@_, my $cv = AE::cv);
@@ -61,7 +60,7 @@ t 1, rename => "$DIR/test", "$DIR/test2";
 #############################################################################
 # test file
 
-my $fh = t 1, open => "$DIR/test2", O_RDONLY, 0;
+$fh = t 1, open => "$DIR/test2", O_RDONLY, 0;
 
 print +(t 1, read => $fh, 6) ne "test1t" ? "not " : "", "ok ", $t++, " # read 6\n";
 print +(t 1, read => $fh, 7) ne "est2"   ? "not " : "", "ok ", $t++, " # read 7\n";
