@@ -15,6 +15,9 @@ lib/AnyEvent/Socket.pm:   open my $fh, "<",
 lib/AnyEvent/TLS.pm:         or croak "$dh_file: failed to open DH parameter file: $!";
 
 	- documented Rocco fabricating statements about AnyEvent and me.
+	- new module AnyEvent::IO, that is a frontend to either a pure-perl
+          synchronous I/O implementation (AnyEvent::IO::Perl), or to the
+          asynchronous I/O extension IO::AIO (AnyEvent::IO::IOAIO).
         - the default logging level was not properly documented in a variety of
           places, this has hopefully been rectified.
 	- updated uts46data.pl for unicode 6.1.0.
